infra/k8s-prod/cms-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cms-postgres
  template:
    metadata:
      labels:
        app: cms-postgres
    spec:
      containers:
        - name: cms-postgres
          image: postgres:10.1
          ports:
          - containerPort: 5432 
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              subPath: ensemble
              name: postgres-storage-cms
      volumes:
        - name: postgres-storage-cms
          persistentVolumeClaim:
            claimName: postgres-pv-claim-cms
---
apiVersion: v1
kind: Service
metadata:
  name: cms-postgres-srv
spec:
  selector:
    app: cms-postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
