infra/k8s-prod/datalake-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datalake-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datalake-mongo
  template:
    metadata:
      labels:
        app: datalake-mongo
    spec:
      containers:
        - name: datalake-mongo
          image: mongo
          volumeMounts:
            - name: mongodb-storage-datalake
              mountPath: /data/db
              subPath: datalake
      volumes:
        - name: mongodb-storage-datalake
          persistentVolumeClaim:
            claimName: mongodb-pv-claim-datalake
---
apiVersion: v1
kind: Service
metadata:
  name: datalake-mongo-srv
spec:
  selector:
    app: datalake-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
