infra/k8s-prod/practitioner-site-oh-mysql-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: practitioner-site-oh-mysql-srv
  labels:
    app: practitioner-site-oh-mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: practitioner-site-oh-mysql
    tier: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: practitioner-site-oh-mysql-depl
  labels:
    app: practitioner-site-oh-mysql
spec:
  selector:
    matchLabels:
      app: practitioner-site-oh-mysql
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: practitioner-site-oh-mysql
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-practitioner-site-oh-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-practitioner-site-oh-storage
        persistentVolumeClaim:
          claimName: pv-claim-practitioner-site-oh-mysql
