infra/k8s-prod/wp-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-srv
  labels:
    app: wp
spec:
  ports:
    - port: 80
  selector:
    app: wp
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-depl
  labels:
    app: wp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wp
        tier: frontend
    spec:
      containers:
      - image: wordpress:5.9.3-php7.4-apache
        name: wp
        ports:
        - containerPort: 80
          name: wp
        volumeMounts:
        - name: wp-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wp-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
