infra/k8s-prod/wp-mysql-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-mysql-srv
  labels:
    app: wp-mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: wp-mysql
    tier: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-mysql-depl
  labels:
    app: wp-mysql
spec:
  selector:
    matchLabels:
      app: wp-mysql
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wp-mysql
        tier: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-wp-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-wp-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim-wp
