infra/k8s-prod/ingress-srv.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: ensemble-tech.shop
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: wp-srv
                port:
                  number: 80
    - host: ensemble-tech.xyz
      http:
        paths:
          - path: /api/identities/?(.*)
            pathType: Prefix
            backend:
              service:
                name: identity-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: cms-srv
                port:
                  number: 1337
    - host: linkaiq.xyz
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-oh-srv
                port:
                  number: 3000
          - path: /api/devices/?(.*)
            pathType: Prefix
            backend:
              service:
                name: devices-oh-srv
                port:
                  number: 3000
          - path: /api/profiles/?(.*)
            pathType: Prefix
            backend:
              service:
                name: profile-oh-srv
                port:
                  number: 3000
          - path: /api/engine/?(.*)
            pathType: Prefix
            backend:
              service:
                name: engine-oh-srv
                port:
                  number: 3000
          - path: /practitioner-portal/?(.*)
            pathType: Prefix
            backend:
              service:
                name: practitioner-site-oh-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: site-oh-srv
                port:
                  number: 3000
  tls:
  - hosts:
    - linkaiq.xyz
    secretName: linkaiq-xyz-tls
  - hosts:
    - ensemble-tech.xyz
    secretName: ensemble-xyz-tls
  - hosts:
    - ensemble-tech.shop
    secretName: ensemble-shop-tls
